# pushdown-automaton

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/lang/: lang1.hpp
include/pda/: pda.hpp
src/: main.cpp  stack.cpp
src/lang/: lang1.cpp
